--- a/index.html
+++ b/index.html
@@ -39,5 +39,38 @@
         <span class="dd-toggle__text">James O.</span>
       </button>
     </header>
+
+    <div class="app__container">
+      <div class="sidebar">
+        <section class="menu">
+          <button class="menu__button">
+            <i class="fas fa-layer-group menu__icon"></i>
+            <span class="menu-text">Templates</span>
+          </button>
+          <button class="menu__button menu__button--active">
+            <i class="fas fa-image menu__icon"></i>
+            <span class="menu-text">Images</span>
+          </button>
+          <button class="menu__button">
+            <i class="fas fa-font menu__icon"></i>
+            <span class="menu-text">Text/Fonts</span>
+          </button>
+          <button class="menu__button">
+            <i class="fas fa-shapes menu__icon"></i>
+            <span class="menu-text">Shapes</span>
+          </button>
+        </section>
+
+        <footer class="footer">
+          <small class="copyright"
+            >&copy; 2050 SocialEditor All Right Reserved</small
+          >
+        </footer>
+      </div>
+
+      <section class="panel"></section>
+
+      <main class="main"></main>
+    </div>
   </body>
 </html>
