add images section with styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,38 @@
         </footer>
       </div>
 
-      <section class="panel"></section>
+      <section class="panel">
+        <div class="panel__top">
+          <h1 class="first-heading">Images</h1>
+          <i class="fas fa-angle-double-left panel__collapse-icon"></i>
+        </div>
+        <div class="panel__images">
+          <img
+            src="./beautiful_woman.jpg"
+            alt="beautiful woman with sun spots"
+            class="panel__img"
+          />
+          <img
+            src="./boxes_of_cupcakes.jpg"
+            alt="boxes of cupcakes"
+            class="panel__img"
+          />
+          <img src="./volcanic_sea.jpg" alt="volcanic sea" class="panel__img" />
+          <img
+            src="./glass_of_champaigne.jpg"
+            alt="glass of champaigne"
+            class="panel__img"
+          />
+          <img
+            src="./psychedlic_colors.jpg"
+            alt="psycedelic purples"
+            class="panel__img"
+          />
+          <button class="panel__btn">
+            <i class="fas fa-plus panel__upload-icon"></i>
+          </button>
+        </div>
+      </section>
 
       <main class="main"></main>
     </div>
