--- a/index.html
+++ b/index.html
@@ -101,7 +101,49 @@
         </div>
       </section>
 
-      <main class="main"></main>
+      <main class="main">
+        <div class="info-bar">
+          <section class="breadcrumbs">
+            <a href="" # class="breadcrumbs__link">Facebook posts</a>
+            <i class="fas fa-angle-right breadcrumbs__icon"></i>
+            <span class="breadcrumbs__name">Happy-hour-friday</span>
+          </section>
+          <button class="button">Publish</button>
+        </div>
+
+        <div class="artboard">
+          <section class="canvas">
+            <img
+              src="./glass_of_champaigne_bg.jpg"
+              alt="glass of champaigne in background"
+              class="canvas__bg-img"
+            />
+            <img
+              src="./glass_of_champaigne_fg.jpg"
+              alt="glass of champaigne in foreground"
+              class="canvas__fg-img"
+            />
+            <div class="canvas__circle"></div>
+            <div class="canvas__circle"></div>
+            <div class="canvas__circle"></div>
+            <div class="canvas__circle"></div>
+          </section>
+          <section class="tools">
+            <button class="tool tool--active">
+              <i class="fas fa-crop-alt tool__icon"></i>
+            </button>
+            <button class="tool">
+              <i class="fas fa-object-group tool__icon"></i>
+            </button>
+            <button class="tool">
+              <i class="fas fa-pen tool__icon"></i>
+            </button>
+            <button class="tool">
+              <i class="fas fa-trash tool__icon"></i>
+            </button>
+          </section>
+        </div>
+      </main>
     </div>
   </body>
 </html>
